; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_buffer.c_test_core_buffer__0.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_buffer.c_test_core_buffer__0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8
@test_string = common dso_local global i32 0, align 4
@test_string_x2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_core_buffer__0() #0 {
  %1 = alloca %struct.TYPE_7__, align 8
  %2 = bitcast %struct.TYPE_7__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %2, i8* align 8 bitcast (%struct.TYPE_7__* @GIT_BUF_INIT to i8*), i64 8, i1 false)
  %3 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %1, i32 0, i32 0
  %4 = load i64, i64* %3, align 8
  %5 = icmp eq i64 %4, 0
  %6 = zext i1 %5 to i32
  %7 = call i32 @cl_assert(i32 %6)
  %8 = load i32, i32* @test_string, align 4
  %9 = call i32 @git_buf_puts(%struct.TYPE_7__* %1, i32 %8)
  %10 = call i64 @git_buf_oom(%struct.TYPE_7__* %1)
  %11 = icmp eq i64 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @cl_assert(i32 %12)
  %14 = load i32, i32* @test_string, align 4
  %15 = call i32 @git_buf_cstr(%struct.TYPE_7__* %1)
  %16 = call i32 @cl_assert_equal_s(i32 %14, i32 %15)
  %17 = load i32, i32* @test_string, align 4
  %18 = call i32 @git_buf_puts(%struct.TYPE_7__* %1, i32 %17)
  %19 = call i64 @git_buf_oom(%struct.TYPE_7__* %1)
  %20 = icmp eq i64 %19, 0
  %21 = zext i1 %20 to i32
  %22 = call i32 @cl_assert(i32 %21)
  %23 = load i32, i32* @test_string_x2, align 4
  %24 = call i32 @git_buf_cstr(%struct.TYPE_7__* %1)
  %25 = call i32 @cl_assert_equal_s(i32 %23, i32 %24)
  %26 = call i32 @git_buf_dispose(%struct.TYPE_7__* %1)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_assert(i32) #2

declare dso_local i32 @git_buf_puts(%struct.TYPE_7__*, i32) #2

declare dso_local i64 @git_buf_oom(%struct.TYPE_7__*) #2

declare dso_local i32 @cl_assert_equal_s(i32, i32) #2

declare dso_local i32 @git_buf_cstr(%struct.TYPE_7__*) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_7__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
